tests/files/lexer_tests/should_fail/032.cmdr
// Illegal character in string (ascii 127)
var = ''